pkgdatadir = $(datadir)/@PACKAGE@/forcefield
SUBDIRS = GenericMOFs \
          Dubbeldam2007FlexibleIRMOF-1 \
          Dubbeldam2007FlexibleIRMOF-10 \
          Dubbeldam2007FlexibleIRMOF-16 \
          GarciaPerez2006 \
          CoreShellSchroderSauer \
          CoreShellSastreGale2005 \
          CoreShellCatlow \
          RigidIonKramer1991 \
          Pascual2004 \
          AmirjalayerSchmid \
          Nicholas \
          Dubbeldam2012MIL-100 \
          Dubbeldam2012MIL-101 \
          McKendrick2012FlexibleMIL-53
